--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -22,22 +22,22 @@
     </button>
   </div>
 
-  <div class="tab-nav">
-    <button class="tab-btn active" onclick="openTab(event, 'general')">
+  <div class="nav-tabs">
+    <button class="nav-item active" onclick="openTab(event, 'general')">
       General
     </button>
-    <button class="tab-btn" onclick="openTab(event, 'agenda-settings')">
+    <button class="nav-item" onclick="openTab(event, 'agenda-settings')">
       Agenda
     </button>
-    <button class="tab-btn" onclick="openTab(event, 'sessions')">
+    <button class="nav-item" onclick="openTab(event, 'sessions')">
       Sessions
     </button>
-    <button class="tab-btn" onclick="openTab(event, 'user-settings')">
+    <button class="nav-item" onclick="openTab(event, 'user-settings')">
       Users</button
-    ><button class="tab-btn" onclick="openTab(event, 'level-roles')">
+    ><button class="nav-item" onclick="openTab(event, 'level-roles')">
       Level Roles
     </button>
-    <button class="tab-btn" onclick="openTab(event, 'presentations')">
+    <button class="nav-item" onclick="openTab(event, 'presentations')">
       Presentations
     </button>
   </div>
