--- a/app/templates/speech_logs.html
+++ b/app/templates/speech_logs.html
@@ -184,13 +184,14 @@
                                     {% set project_code = log.project_code or '' %}
                                     {# Handle Presentation display #}
                                     {% if log.session_type and log.session_type.Title == 'Presentation' %}
-                                        {% set presentation = get_presentation_by_id(log.Project_ID) %} {# Assumes a helper function or direct access #}
-                                        <span class="project-name">{{ presentation.title if presentation else 'N/A' }}</span>
+                                        <span class="project-name">{{ log.project.Project_Name if log.project else 'N/A' }}</span>
                                         
-                                        {% if presentation and presentation.series in series_initials %}
-                                            {% set p_code = series_initials[presentation.series] + presentation.code|string %}
+                                        {% if log.presentation_series and log.presentation_series in series_initials %}
+                                            {% set p_code = series_initials[log.presentation_series] + (log.presentation_code|string if log.presentation_code else '') %}
                                         {% else %}
-                                            {% set p_code = '(L' + presentation.level|string + ')' if presentation else '' %}
+                                            {# Fallback or default presentation level display if series not in initials #}
+                                            {# Attempt to use level from display_level if available, or just nothing #}
+                                            {% set p_code = '' %} 
                                         {% endif %}
                                         <span class="project-code">{{ p_code }}</span>
                                         {% else %}
@@ -203,10 +204,9 @@
                                     <div class="pathway-info">
                                         {# Show Series for Presentation, Pathway otherwise #}
                                         {% if log.session_type and log.session_type.Title == 'Presentation' %}
-                                            {% set presentation = get_presentation_by_id(log.Project_ID) %}
-                                            {{ presentation.series if presentation else 'N/A' }}
+                                            {{ log.presentation_series if log.presentation_series else 'N/A' }}
                                         {% else %}
-                                            <td>{{ log.owner.Current_Path if log.owner else 'N/A' }}</td>
+                                            {{ log.owner.Current_Path if log.owner else 'N/A' }}
                                         {% endif %}
                                     </div>
                                     <div class="status-info">
@@ -355,8 +355,7 @@
         var allProjects = {{ projects|tojson|safe }};
         var pathwayMap = {{ pathway_mapping|tojson|safe }};
         var groupedPathways = {{ pathways|tojson|safe }};
-        var allPresentations = {{ presentations|tojson|safe }}; // Ensure presentations is passed from backend
-        var presentationSeries = {{ presentation_series|tojson|safe }}; // Ensure presentation_series is passed
+
     </script>
 
     <script src="{{ url_for('static', filename='js/speech_modal.js') }}"></script>
