refactor: Update project code and level data structure to enable dynamic level filtering and fetch series initials from the database.

--- a/app/templates/speech_logs.html
+++ b/app/templates/speech_logs.html
@@ -355,6 +355,7 @@
         var allProjects = {{ projects|tojson|safe }};
         var pathwayMap = {{ pathway_mapping|tojson|safe }};
         var groupedPathways = {{ pathways|tojson|safe }};
+        var allSeriesInitials = {{ series_initials|tojson|safe }};
 
     </script>
 
