feat: Add `is_member_only` to roles, refactor project code derivation, and move `sync_contact_metadata` to `utils`.

--- a/app/templates/_role_modal.html
+++ b/app/templates/_role_modal.html
@@ -56,6 +56,22 @@
               name="is_distinct"
               style="transform: scale(1.2)"
             />
+
+            <label
+              for="is_member_only"
+              style="
+                display: inline-block;
+                margin-left: 30px;
+                margin-right: 15px;
+              "
+              >Is Member Only:</label
+            >
+            <input
+              type="checkbox"
+              id="is_member_only"
+              name="is_member_only"
+              style="transform: scale(1.2)"
+            />
           </td>
         </tr>
       </table>
