--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -125,16 +125,18 @@
                 {% if is_authorized('AGENDA_EDIT') %}
                 {% if selected_meeting.status %}
                     <span class="meeting-status-display status-{{ selected_meeting.status }}" title="Meeting Status: {{ selected_meeting.status.replace('_', ' ').title() }}">
-                        <i class="fas fa-fw {% if selected_meeting.status == 'not started' %}fa-play-circle{% elif selected_meeting.status == 'running' %}fa-broadcast-tower{% elif selected_meeting.status == 'finished' %}fa-check-circle{% elif selected_meeting.status == 'cancelled' %}fa-ban{% endif %}"></i>
+                        <i class="fas fa-fw {% if selected_meeting.status == 'unpublished' %}fa-eye-slash{% elif selected_meeting.status == 'not started' %}fa-play-circle{% elif selected_meeting.status == 'running' %}fa-broadcast-tower{% elif selected_meeting.status == 'finished' %}fa-check-circle{% elif selected_meeting.status == 'cancelled' %}fa-ban{% endif %}"></i>
                         {{ selected_meeting.status.replace('_', ' ').title() }}
                     </span>
                 {% endif %}
                 <button id="meeting-status-btn" 
-                        class="btn {% if selected_meeting.status in ['finished','cancelled'] %}btn-secondary{% else %}btn-primary{% endif %}"
+                        class="btn {% if selected_meeting.status in ['finished','cancelled'] %}btn-secondary{% elif selected_meeting.status == 'unpublished' %}btn-success{% else %}btn-primary{% endif %}"
                         data-meeting-number="{{ selected_meeting.Meeting_Number }}"
                         data-current-status="{{ selected_meeting.status }}"
                         {% if selected_meeting.status == 'cancelled' %}disabled{% endif %}>
-                    {% if selected_meeting.status == 'not started' %}
+                    {% if selected_meeting.status == 'unpublished' %}
+                        Publish
+                    {% elif selected_meeting.status == 'not started' %}
                         Start
                     {% elif selected_meeting.status == 'running' %}
                         Stop
