--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -160,7 +160,7 @@
     {% if is_authorized('AGENDA_EDIT') %}
     <div class="button-group" id="edit-mode-buttons" style="display: none;">
         <button id="cancel-edit-btn" class="btn btn-danger">Cancel</button>
-        <button id="add-row-btn" class="btn btn-info">Add</button>
+        <button id="add-row-btn" class="btn btn-info">Add Section</button>
         <button id="edit-logs-btn" class="btn btn-primary">Save</button>
     </div>
     {% endif %}
